# mujoco-xml-editor

./: .gitignore  README.md  format.sh  pyproject.toml  setup.py
.github/workflows/: test.yaml
examples/: pitcher.py  primitive.py  primitive_composite.py  robotiq_hand_grasp.py
mujoco_xml_editor/: __init__.py
mujoco_xml_utils/: xml_utils.py
