[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-xml-editor"
version = "0.0.0"
dependencies = ["numpy", "coacd", "lxml"]

[project.optional-dependencies]
examples = ["mujoco", "mujoco-python-viewer"]

[tool.setuptools]
packages = ["mujoco_xml_editor"]

[tool.setuptools.package-data]
"mujoco" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
